# opengl-playground

./: .gitattributes  .gitignore  Makefile  README.md  dep.ps1  dep.sh
depsrc/: README.txt  glew-2.1.0.tar.bz2  glfw-3.2.1.patch.list  glfw-3.2.1.tar.bz2  lua-5.3.4.tar.bz2  lua-5.3.6.patch.list  readline-8.0.tar.bz2  readline-8.1.patch.list  soil-0.0.2.tar.bz2  soil-0.1.1.patch.list  tcc-0.9.27.tar.bz2  wineditline-2.206.tar.bz2
depsrc/glfw-3.2.1.patch/: patch.sh
depsrc/glfw-3.2.1.patch.files/glfw/: Makefile
depsrc/glfw-3.2.1.patch.files/glfw/examples/: Makefile
depsrc/glfw-3.2.1.patch/src/: Makefile
depsrc/lua-5.3.6.patch.files/lua/src/: CMakeLists.txt
depsrc/readline-8.1.patch.files/readline/: Makefile.in  configure  configure.ac
depsrc/soil-0.1.1.patch.files/soil/: CMakeLists.txt
images/: Green.xcf  Pebbles.xcf
src/: Makefile  bmp.json  config.c  config.h  log.c  log.h  main.c  makeosx.sh  module.c  module.h  parse.c  parse.h  render.c  render.h  structgen.py  test.c
tccpatch/: Makefile  machod.json  main.c  parse.c  parse.h  structgen.py
win32/vs2012/: game.sln  game.vcxproj  game.vcxproj.filters
